create new summaryDividend API & modify dividend API
